--- a/src/container/bio.hbs
+++ b/src/container/bio.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
 
-<div>
+<div class="ps-5">
     <section>
         {{> title big=true data="Bio"}}
 
